feat(admin): add getting balance by order history
